@@ -1,4 +1,10 @@
-﻿shmuel 25.08.2014 20:23:55 +0200 - build 418
+﻿shmuel 26.08.2014 21:16:27 +0200 - build 419
+
+1. MCTL_LOADALL поддерживает явное указание путей, с которых будут грузиться макрофайлы.
+
+2. LuaFAR: far.MacroLoadAll поддерживает явное указание путей, с которых будут грузиться макрофайлы.
+
+shmuel 25.08.2014 20:23:55 +0200 - build 418
 
 1. Мелкий рефакторинг.
 
